@@ -14,9 +14,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>15</source>
-                    <target>15</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
+                    <source>16</source>
+                    <target>16</target>
                 </configuration>
             </plugin>
         </plugins>
@@ -25,8 +24,9 @@
     <properties>
         <maven.compiler.source>15</maven.compiler.source>
         <maven.compiler.target>15</maven.compiler.target>
-        <springboot.version>2.4.3</springboot.version>
-        <spring.version>5.3.4</spring.version>
+        <springboot.version>2.5.2</springboot.version>
+        <spring.version>5.3.8</spring.version>
+        <yavi.version>0.8.2</yavi.version>
     </properties>
 
     <dependencies>
@@ -81,6 +81,16 @@
             <artifactId>jakarta.jms-api</artifactId>
             <version>2.0.3</version>
         </dependency>
+        <dependency>
+            <groupId>am.ik.yavi</groupId>
+            <artifactId>yavi</artifactId>
+            <version>${yavi.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.aventrix.jnanoid</groupId>
+            <artifactId>jnanoid</artifactId>
+            <version>2.0.0</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -116,7 +126,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.18</version>
+            <version>1.18.20</version>
             <scope>provided</scope>
         </dependency>
 
@@ -124,6 +134,16 @@
             <groupId>org.zeromq</groupId>
             <artifactId>jeromq-jms</artifactId>
             <version>3.0.1-RELEASE</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.sun.tools</groupId>
+                    <artifactId>jconsole</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>com.sun.tools</groupId>
+                    <artifactId>tools</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.zeromq</groupId>
